anpassungen2 git commit -m anpassungen

--- a/HTML_CSS_knowledge_repository.html
+++ b/HTML_CSS_knowledge_repository.html
@@ -1,80 +1,25 @@
-Bücher:
-
-o'reilly
-elisabeth robson & eric freeman
-head first: HTML and CSS
-
-
-
-Links:
-https://developer.mozilla.org
-cssreference.io
-fonts.google.com
-
-
-https://git-scm.com/download/win
-https://desktop.github.com/
-
-
-
-Websuche mit dem Begriff "MDN" (Mozilla Developer)
-
-
-ctrl. + D   = alle markieren und ersetzen
-
-
-Auskommentieren:
+Bücher: o'reilly elisabeth robson & eric freeman head first: HTML and CSS Links: https://developer.mozilla.org cssreference.io fonts.google.com https://git-scm.com/download/win https://desktop.github.com/ Websuche mit dem Begriff "MDN" (Mozilla Developer)
+ctrl. + D = alle markieren und ersetzen Auskommentieren:
 
 <!--
 safsdfaasdf
 -->
 
 
-atom; ctrl. + ,  (preferences)
+atom; ctrl. + , (preferences) firefox neues privates fenster = ctrl. shift P packages: atom-beautify (activate beautify on save) emmet homebrew -> renv renv -> ruby ruby -> rails MAC: Install SW with homebrew (brew install git) Ruby installieren: http://guides.railsgirls.com/install
+rbenv -> Ruby environment (set default ruby) H1 Header wird von den Suchmaschinen mehr Bedeutung zugewiesen Alternativer Text für bilder werden bei suchmaschinen auch berücksichtigt. deshalb nicht logo.jpg sonder firmenname.jpg # Mit Route heisst bleib
+auf der gleichen seite The <a> tag defines a hyperlink, which is used to link from one page to another.
 
-firefox neues privates fenster = ctrl. shift P
+The most important attribute of the <a> element is the href attribute, which indicates the link's destination.
 
+By default, links will appear as follows in all browsers:
 
-
-packages:
-
-atom-beautify (activate beautify on save)
-emmet
-
-
-
-homebrew -> renv
-renv -> ruby
-ruby -> rails
+    An unvisited link is underlined and blue
+    A visited link is underlined and purple
+    An active link is underlined and red
 
 
-MAC:
-
-Install SW
-
-homebrew (brew install git)
-
-
-
-github: sra448 (Flo)
-
-
-
-Ruby installieren:
-
-http://guides.railsgirls.com/install
-rbenv -> 	Ruby environment	(set default ruby)
-
-
-
-
-H1 Header wird von den Suchmaschinen mehr Bedeutung zugewiesen
-
-Alternativer Text für bilder werden bei suchmaschinen auch berücksichtigt. deshalb nicht logo.jpg sonder firmenname.jpg
-
-
-
-# Mit Route heisst bleib auf der gleichen seite
+The <div> tag defines a division or a section in an HTML document.
 
 
 
