--- a/HTML_CSS_knowledge_repository.html
+++ b/HTML_CSS_knowledge_repository.html
@@ -1,16 +1,33 @@
-Bücher: o'reilly elisabeth robson & eric freeman head first: HTML and CSS Links: https://developer.mozilla.org cssreference.io fonts.google.com https://git-scm.com/download/win https://desktop.github.com/ Websuche mit dem Begriff "MDN" (Mozilla Developer)
+<!-- Bücher: o'reilly elisabeth robson & eric freeman head first:
+HTML and CSS Links: https://developer.mozilla.org
+cssreference.io
+fonts.google.com
+https://git-scm.com/download/win
+https://desktop.github.com/
+
+Websuche mit dem Begriff "MDN" (Mozilla Developer)
 ctrl. + D = alle markieren und ersetzen Auskommentieren:
 
-<!--
-safsdfaasdf
 -->
 
 
-atom; ctrl. + , (preferences) firefox neues privates fenster = ctrl. shift P packages: atom-beautify (activate beautify on save) emmet homebrew -> renv renv -> ruby ruby -> rails MAC: Install SW with homebrew (brew install git) Ruby installieren: http://guides.railsgirls.com/install
-rbenv -> Ruby environment (set default ruby) ************************************************************************************* H1 Header wird von den Suchmaschinen mehr Bedeutung zugewiesen Alternativer Text für bilder werden bei suchmaschinen auch
-berücksichtigt. deshalb nicht logo.jpg sonder firmenname.jpg # Mit Route heisst bleib auf der gleichen seite The <a> tag defines a hyperlink, which is used to link from one page to another.
+<!-- atom; ctrl. + , (preferences)
+firefox neues privates fenster = ctrl. shift P
 
-The most important attribute of the <a> element is the href attribute, which indicates the link's destination.
+packages: atom-beautify (activate beautify on save)
+emmet
+
+homebrew -> renv renv -> ruby ruby -> rails
+
+MAC: Install SW with homebrew (brew install git)
+Ruby installieren: http://guides.railsgirls.com/install
+rbenv -> Ruby environment (set default ruby)  -->
+
+*************************************************************************************
+
+<!-- H1 Header wird von den Suchmaschinen mehr Bedeutung zugewiesen Alternativer Text für bilder werden bei suchmaschinen auch berücksichtigt. deshalb nicht logo.jpg sonder firmenname.jpg # Mit Route heisst bleib
+auf der gleichen seite The <a> tag defines a hyperlink, which is used to link from one page to another.
+
 
 By default, links will appear as follows in all browsers:
 
@@ -19,69 +36,17 @@ By default, links will appear as follows in all browsers:
     An active link is underlined and red
 
 
-The <div> tag defines a division or a section in an HTML document.
+The <div> tag defines a division or a section in an HTML document. -->
 
+Links: The target attribute can have one of the following values:
 
-
-Embed Font
-
-<!-- To embed your selected fonts into a webpage, copy this code into the <head> of your HTML document.
-STANDARD @IMPORT -->
-<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
-
-<!-- and in CSS specify font: -->
-
-h1{
-  font-family: "Eater|Indie+Flower", cursive;
-
-
-
-
-
-Dies ist  eine wildcard und gilt für alle Elemente, wenn nicht spezifisch definiert
-* {
-  text-align: center;
-}
-
-
-
-
-
-
-
-CSS Klassen, es gibt 2 Varianten:
-
-<h2 class="pretty-border">Awesome</h2>
-
-.pretty-border{
-border: 2px blue solid;
-}
-
-h2.pretty-border{
-border: 3px pink solid;
-}
-
-
-
-<h2 id="pretty-border">Awesome</h2>
-
-
-
-Bootstrap Stylesheet verlinken in Head section:
- <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' rel='stylesheet'>
-
-
-Links:
-
-The target attribute can have one of the following values:
-
-    <!-- _blank - Opens the linked document in a new window or tab
+<!-- _blank - Opens the linked document in a new window or tab
     _self - Opens the linked document in the same window/tab as it was clicked (this is default)
     _parent - Opens the linked document in the parent frame
     _top - Opens the linked document in the full body of the window
     framename - Opens the linked document in a named frame -->
 
- <a href="https://www.w3schools.com/" target="_blank">Visit W3Schools!</a>
+<a href="https://www.w3schools.com/" target="_blank">Visit W3Schools!</a>
 <!-- By default, a link will appear like this (in all browsers): An unvisited link is underlined and blue A visited link is underlined and purple An active link is underlined and red -->
 
 
@@ -112,6 +77,23 @@ The target attribute can have one of the following values:
 </style>
 
 
-Logo zentrieren:
+
+
+Embed Font
+
+<!-- To embed your selected fonts into a webpage, copy this code into the <head> of your HTML document.
+STANDARD @IMPORT -->
+<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+
+<!-- and in CSS specify font: -->
+
+h1{ font-family: "Eater|Indie+Flower", cursive; Dies ist eine wildcard und gilt für alle Elemente, wenn nicht spezifisch definiert * { text-align: center; } CSS Klassen, es gibt 2 Varianten:
+
+<h2 class="pretty-border">Awesome</h2> .pretty-border{ border: 2px blue solid; } h2.pretty-border{ border: 3px pink solid; }
+
+
+
+<h2 id="pretty-border">Awesome</h2> Bootstrap Stylesheet verlinken in Head section:
+<link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' rel='stylesheet'> Logo zentrieren:
 
 <img src="paris.jpg" alt="Paris" class="center"> .center { display: block; margin-left: auto; margin-right: auto; width: 50%; }
