--- a/HTML_CSS_knowledge_repository.html
+++ b/HTML_CSS_knowledge_repository.html
@@ -25,6 +25,133 @@ rbenv -> Ruby environment (set default ruby)  -->
 
 *************************************************************************************
 
+
+
+
+
+    - All HTML elements can have attributes
+    - The title attribute provides additional "tool-tip" information
+    - The href attribute provides address information for links
+    - The width and height attributes provide size information for images
+    - The alt attribute provides text for screen readers
+    - At W3Schools we always use lowercase attribute names
+    - At W3Schools we always quote attribute values with double quotes
+
+
+    - Use the style attribute for styling HTML elements
+    - Use background-color for background color
+    - Use color for text colors
+    - Use font-family for text fonts
+    - Use font-size for text sizes
+    - Use text-align for text alignment
+
+
+    Note: Browsers display <strong> as <b>, and <em> as <i>.
+    However, there is a difference in the meaning of these tags:
+    <b> and <i> defines bold and italic text,
+    but <strong> and <em> means that the text is "important".
+
+
+    Attribute 	Description
+    alt 	      Specifies an alternative text for an image, when the image cannot be displayed
+    disabled 	  Specifies that an input element should be disabled
+    href 	      Specifies the URL (web address) for a link
+    id 	        Specifies a unique id for an element
+    src 	      Specifies the URL (web address) for an image
+    style 	    Specifies an inline CSS style for an element
+    title 	    Specifies extra information about an element (displayed as a tool tip)
+
+    Tag 	        Description
+    <html> 	      Defines the root of an HTML document
+    <body> 	      Defines the document's body
+    <head> 	      A container for all the head elements (title, scripts, styles, meta information, and more)
+    <h1> to <h6> 	Defines HTML headings
+    <hr> 	        Defines a thematic change in the content
+    <p> 	        Defines a paragraph
+    <br> 	        Inserts a single line break
+    <pre> 	      Defines pre-formatted text
+
+
+
+    <b>           Bold text
+    <strong>      Important text
+    <small>       Small text
+    <i>           Italic text
+    <em>          Emphasized text
+    <mark>        Marked text
+    <del>         Deleted text
+    <ins>         Inserted text
+    <sub>         Subscript text
+    <sup>         Superscript text
+    <q>           quotation note
+	<u>			  underline
+
+	
+	
+	
+	Block-level Elements
+
+A block-level element always starts on a new line and takes up the full width available (stretches out to the left and right as far as it can).
+	
+	Block level elements in HTML:
+<address>
+<article>
+<aside>
+<blockquote>
+<canvas>
+<dd>
+<div>
+<dl>
+<dt>
+<fieldset>
+<figcaption>
+<figure>
+<footer>
+<form>
+<h1>-<h6>
+<header>
+<hr>
+<li>
+<main>
+<nav>
+<noscript>
+<ol>
+<output>
+<p>
+<pre>
+<section>
+<table>
+<tfoot>
+<ul>
+<video>
+
+	
+	
+	
+	Inline Elements
+
+An inline element does not start on a new line and only takes up as much width as necessary.
+
+This is an inline <span> element inside a paragraph.
+	
+
+
+<p>
+An image as a link: <a href="https://www.w3schools.com">
+<img border="0" alt="W3Schools" src="logo_w3s.gif" width="100" height="100">
+</a>
+</p>
+
+
+
+
+  /* margin-left: auto;
+  margin-right: auto; */
+  
+  Ist das gleiche wie:
+  
+  margin: 0 auto 0 auto;
+
 <!-- H1 Header wird von den Suchmaschinen mehr Bedeutung zugewiesen Alternativer Text für bilder werden bei suchmaschinen auch berücksichtigt. deshalb nicht logo.jpg sonder firmenname.jpg # Mit Route heisst bleib
 auf der gleichen seite The <a> tag defines a hyperlink, which is used to link from one page to another.
 
@@ -97,3 +224,32 @@ h1{ font-family: "Eater|Indie+Flower", cursive; Dies ist eine wildcard und gilt 
 <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' rel='stylesheet'> Logo zentrieren:
 
 <img src="paris.jpg" alt="Paris" class="center"> .center { display: block; margin-left: auto; margin-right: auto; width: 50%; }
+
+
+
+
+
+
+
+<table>
+    <tr>
+        <td>Row 1, cell 1</td>
+        <td>Row 1, cell 2</td>
+        <td>Row 1, cell 3</td>
+    </tr>
+    <tr>
+        <td>Row 2, cell 1</td>
+        <td>Row 2, cell 2</td>
+        <td>Row 2, cell 3</td>
+    </tr>
+    <tr>
+        <td>Row 3, cell 1</td>
+        <td>Row 3, cell 2</td>
+        <td>Row 3, cell 3</td>
+    </tr>
+    <tr>
+        <td>Row 4, cell 1</td>
+        <td>Row 4, cell 2</td>
+        <td>Row 4, cell 3</td>
+    </tr>
+</table>
