--- a/HTML CSS/CSS_knowledge_repository.html
+++ b/HTML CSS/CSS_knowledge_repository.html
@@ -257,6 +257,28 @@ h1{ font-family: "Eater|Indie+Flower", cursive; Dies ist eine wildcard und gilt 
 
 
 
+<h3>Some random form</h3>
+  <p><strong>Note:</strong> It looks the part, but won't do a damned thing.</p>
+
+  <form action="somescript.php" method="post">
+
+    <p>Name:</p>
+    <p><input name="name" value="Your name"></p>
+
+    <p>Comments: </p>
+    <p><textarea rows="10" cols="20" name="comments">Your comments</textarea></p>
+
+    <p>Are you:</p>
+    <p><input type="radio" name="areyou" value="male"> Male</p>
+    <p><input type="radio" name="areyou" value="female"> Female</p>
+    <p><input type="radio" name="areyou" value="hermaphrodite"> An hermaphrodite</p>
+    <p><input type="radio" name="areyou" value="asexual" checked> Asexual</p>
+
+    <p><input type="submit"></p>
+
+  </form>
+
+
 
 Buttons
 
